added function but products